--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -23,6 +23,7 @@
         "search": "Tìm kiếm",
         "difficulty": "Độ khó",
         "easy": "Dễ",
+        "all": "Tất cả",
         "medium": "Trung bình",
         "hard": "Khó",
         "minutes": "phút",
